fix overflow issues

--- a/DjangoProject/static/style/base.css
+++ b/DjangoProject/static/style/base.css
@@ -2,15 +2,11 @@ html * {
   font-family: Nunito, sans-serif;
 }
 
-html {
-    height: 100%;
-    box-sizing: border-box;
-}
-
 body {
     margin: 0;
     padding: 5px;
-    height: 100%;
+    height: 100vh;
+    max-height: 100vh;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
